<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff2a7eff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_margin="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/title_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/title" />

            <TextView
                android:id="@+id/how_to_play_1_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/how_to_play_1" />

            <TextView
                android:id="@+id/how_to_play_2_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/how_to_play_2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/how_to_play_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_3" />

            <TextView
                android:id="@+id/how_to_play_4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_4"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swing_image"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/how_to_play_swing" />

            <TextView
                android:id="@+id/how_to_play_5_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/how_to_play_5"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/how_to_play_6_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_6" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serve_image"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/how_to_play_serve" />

            <TextView
                android:id="@+id/how_to_play_7_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_7" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/return_image"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/how_to_play_return" />

            <TextView
                android:id="@+id/how_to_play_8_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_8" />
            <TextView
                android:id="@+id/how_to_play_9_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/how_to_play_9"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/how_to_play_10_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_10" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>